Implement truth table as check when we resolve user in request.